zookeeper实现的注册中心

--- a/zookeeper/user-center/src/main/resources/application.yml
+++ b/zookeeper/user-center/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+server:
+  port: 9000
+spring:
+  application:
+    name: user-center
+  cloud:
+    zookeeper:
+      connect-string: localhost:2181
+      discovery:
+        register: true
