--- a/dubbo/dubbo-simulate/pom.xml
+++ b/dubbo/dubbo-simulate/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.6</version>
         </dependency>
+        <!--netty依赖-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.20.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
